--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ includes/class.user.php
 class.user.php
 class.user.php
 class.user.php
+includes/database-config.php
+includes/database-config.php
+includes/database-config.php
